[package]
name = "tmq"
version = "0.3.2"
authors = ["cetra3 <cetra3@hotmail.com>", "skrap <jonah@petri.us>", "kobzol <berykubik@gmail.com>", "YushiOMOTE <yushiomote@gmail.com>"]
license = "MIT/Apache-2.0"
description = "ZeroMQ bindings for Tokio"
repository = "https://github.com/cetra3/tmq"
readme = "README.md"
edition = "2018"

[features]
# zmq2-vendored = ["zmq2/vendored"]

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1.0", features = ["net"] }
# zmq = ">=0.9.2"
zmq2 ="0.5.0"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
pretty_env_logger = "0.4"
rand = "0.7"
criterion = "0.3"

[[bench]]
name = "poll"
harness = false
