[package]
name = "tmq"
version = "0.5.0"
authors = ["cetra3 <cetra3@hotmail.com>", "skrap <jonah@petri.us>", "kobzol <berykubik@gmail.com>", "YushiOMOTE <yushiomote@gmail.com>", "iddm <fx@thefx.co>"]
license = "MIT/Apache-2.0"
description = "ZeroMQ bindings for Tokio"
repository = "https://github.com/cetra3/tmq"
readme = "README.md"
edition = "2021"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["net"] }
zmq = "0.10"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "poll"
harness = false
